--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.525.0",
+    "@headlessui/vue": "^1.7.19",
+    "@heroicons/vue": "^2.1.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "bcrypt": "^5.1.1",
+    "javascript-time-ago": "^2.5.9",
     "nuxt": "^3.10.3",
+    "nuxt-mongoose": "^1.0.5",
+    "relative-time-format": "^1.1.6",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@sidebase/nuxt-auth": "^0.6.7",
+    "@types/bcrypt": "^5.0.2"
   }
 }
