--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/vue": "^2.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "bcrypt": "^5.1.1",
+    "dom-to-image": "^2.6.0",
     "javascript-time-ago": "^2.5.9",
     "nuxt": "^3.10.3",
     "nuxt-mongoose": "^1.0.5",
