--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
+    "@aws-sdk/node-http-handler": "^3.374.0",
     "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "bcrypt": "^5.1.1",
     "dom-to-image": "^2.6.0",
+    "https": "^1.0.0",
     "javascript-time-ago": "^2.5.9",
     "mongoose": "^8.2.0",
     "nuxt": "^3.10.3",
